Corrected minor formating problems, moslty to avoid line overflows when converting the XHTML pages into PDF documents.
git-svn-id: http://svn.logtalk.org/logtalk/trunk@2857 ac9c905b-388a-4ddf-9b6a-4063a022bc57

--- a/manuals/print.css
+++ b/manuals/print.css
@@ -155,9 +155,11 @@ pre {
 ul, ol {
 	display: compact;
 	page-break-before: avoid;
+	page-break-inside: avoid;
 }
 
 dl {
 	page-break-before: avoid;
+	page-break-inside: avoid;
 	padding-left: 2em;
 }
